navbar bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,8 @@ body {
     top: 0;
   }
   .navbar a {
-    padding: 10px 60px;
+    padding: 10px  20px;
+    width: fit-content;
   }
   .navbar a::after {
     background: radial-gradient(
